--- a/FacebookFanpageApp/App_GlobalResources/FacebookAppResources.resx
+++ b/FacebookFanpageApp/App_GlobalResources/FacebookAppResources.resx
@@ -121,7 +121,7 @@
     <value>canceled</value>
   </data>
   <data name="introText" xml:space="preserve">
-    <value>&lt;p&gt;ASP.Net routing injects a session id into the url in case of AutoDetect or UseUri settings of sessionState cookieless="AutoDetect|UseUri" and the browser does not allow third party cookies.&lt;/p&gt;
+    <value>&lt;p&gt;ASP.Net routing injects a session id into the url in case of AutoDetect or UseUri settings for sessionState cookieless="AutoDetect|UseUri" if the browser does not allow third party cookies.&lt;/p&gt;
     &lt;p&gt;JS SDK needs third party cookies too. Thus I have build this demo app.&lt;/p&gt;&lt;p&gt;This app also demonstrates multi language support according user settings.&lt;/p&gt;</value>
   </data>
   <data name="loginButton" xml:space="preserve">
